--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,35 @@
 .skills-container {
-  @apply flex flex-wrap justify-between items-start mb-20;
+  @apply flex flex-wrap justify-between items-start pl-[8rem];
 }
 
 .skills-card {
-  @apply w-[100%] md:w-[450px] h-[100px] font-[Inter] text-xs font-normal p-6 mb-4; 
+  @apply md:w-[450px] font-[Inter] text-[22px] font-normal mb-[3rem] mt-[3rem]; 
 }
 
 .skills-h2 {
-  @apply font-[Inter] text-[30px] font-medium leading-[28px] text-[#4338CA] pb-3
+  @apply font-[Inter] text-[30px] font-medium leading-[28px] text-[#4338CA] pb-[5px]
 }
 
 .profile-h1 {
-  @apply w-[150px] h-12 opacity-100 font-[Inter] text-5xl font-semibold mb-10
+  @apply opacity-100 font-[Inter] text-5xl font-semibold mb-[3rem]
 }
 
 .profile-baslik {
-  @apply font-[Inter] text-[30px] font-medium leading-[28px] text-[#4338CA] pb-5 
+  @apply font-[Inter] text-[30px] font-medium leading-[28px] text-[#4338CA] pb-[1rem]
 }
 
 
 .profile-p {
-  @apply w-[500px] font-semibold mb-2.5 
+  @apply w-[500px]  font-semibold text-[1.2rem] mb-[0.5rem] 
 }
 
 
 
 
 .profile-data {
-  @apply font-[Inter] text-[18px] font-normal leading-9 tracking-widest text-left
+  @apply font-[Inter] text-[18px] font-normal leading-9 tracking-widest ml-[0.5rem]
 }
 
 .project-title {
-  @apply font-[Inter] text-[30px] font-medium leading-[28px] text-[#4338CA] pb-5
+  @apply font-[Inter] font-medium leading-[28px] text-[#4338CA]
 }
